test-cases/negative/test_128_invalid_arithmetic_order.lay
# negative test: invalid operator precedence or syntax
# expected: parser should reject this or type checker should catch

the variable x of type Number is 5 divided by divided by 2


